--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "deepl-node": "^1.11.0",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
-    "openai": "^4.16.1"
+    "openai": "^4.16.1",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
-    "eslint": "^8.53.0"
+    "eslint": "^8.53.0",
+    "jest": "^29.7.0"
   }
 }
