--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,11 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
-    "openai": "^4.16.1",
-    "supertest": "^6.3.3"
+    "openai": "^4.16.1"
   },
   "devDependencies": {
     "eslint": "^8.53.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
