--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
+    "@types/lodash": "^4.14.201",
     "cors": "^2.8.5",
     "deepl-node": "^1.11.0",
     "express": "^4.18.2",
@@ -19,8 +20,10 @@
     "openai": "^4.16.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1"
   }
 }
