--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "@types/node": "^20.9.4",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "@types/mongoose": "^5.11.97"
   }
 }
