--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
-    "openai": "^4.16.1"
+    "openai": "^4.16.1",
+    "module": "module"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
@@ -25,6 +26,10 @@
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.9.4",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.2"
   }
 }
