--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@types/lodash": "^4.14.201",
     "cors": "^2.8.5",
@@ -17,8 +17,7 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
-    "openai": "^4.16.1",
-    "module": "module"
+    "openai": "^4.16.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
