--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@types/lodash": "^4.14.201",
     "cors": "^2.8.5",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
     "@types/express": "^4.17.21",
+    "@types/node": "^20.9.4",
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
