--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Solo Project",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ../Build/index.js",
     "test": "jest"
   },
   "keywords": [],
@@ -22,13 +23,13 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.9.4",
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
-    "ts-node": "^10.9.1",
-    "@types/jest": "^29.5.10",
-    "@types/node": "^20.9.4",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   }
 }
