--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "cors": "^2.8.5",
     "deepl-node": "^1.11.0",
     "express": "^4.18.2",
-    "mongoose": "^8.0.0",
+    "mongoose": "^8.0.1",
     "nodemon": "^3.0.1",
     "openai": "^4.16.1"
   },
@@ -24,6 +24,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.9.4",
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
