--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
     "@types/mongoose": "^5.11.97",
