--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/mongoose": "^5.11.97",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.1"
   }
 }
